[gd_scene load_steps=11 format=3 uid="uid://b8yhfea4l01jq"]

[ext_resource type="Script" path="res://scenes/Player/player.gd" id="1_ilfjw"]
[ext_resource type="Texture2D" uid="uid://5abatn5imjw8" path="res://assets/16ShipCollection.png" id="2_akpwl"]
[ext_resource type="SpriteFrames" uid="uid://cvlx8fdsgy4vt" path="res://assets/animations/explosion_animation.tres" id="3_3o65n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5lw3l"]
atlas = ExtResource("2_akpwl")
region = Rect2(28, 42, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_28apt"]
atlas = SubResource("AtlasTexture_5lw3l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8bw3"]
atlas = ExtResource("2_akpwl")
region = Rect2(28, 504, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn0ao"]
atlas = ExtResource("2_akpwl")
region = Rect2(40, 504, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_nytmn"]
atlas = ExtResource("2_akpwl")
region = Rect2(52, 504, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_im7qo"]
atlas = ExtResource("2_akpwl")
region = Rect2(64, 504, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_aox20"]
animations = [{
"frames": [SubResource("AtlasTexture_n8bw3"), SubResource("AtlasTexture_vn0ao")],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"speed_down",
"speed": 5.0
}, {
"frames": [SubResource("AtlasTexture_nytmn"), SubResource("AtlasTexture_im7qo")],
"loop": true,
"name": &"speed_up",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 2
motion_mode = 1
script = ExtResource("1_ilfjw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -7, 7, 0, 7, 4, -7, 4, -7, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
texture = SubResource("AtlasTexture_28apt")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="FlareAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 5)
rotation = -1.5708
frames = SubResource("SpriteFrames_aox20")
animation = &"speed_down"
playing = true
offset = Vector2(1, 2)

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, -400)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, -7, 7, 0, 7, 4, -7, 4, -7, 0)

[node name="ExplodeAnimation" type="AnimatedSprite2D" parent="."]
visible = false
frames = ExtResource("3_3o65n")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
